--- a/src/app/Medicamentos/desparasitantes/desparasitantes.component.html
+++ b/src/app/Medicamentos/desparasitantes/desparasitantes.component.html
@@ -13,14 +13,16 @@
   
 </div>
 <!-- /.container -->
-<div class="row center" style="    margin-right: -248px;
-margin-left: 59px;">
-    <div class="col-12 col-md-3"><div class="card">
+<div class="row center" style="margin-right: 0rem;
+margin-left: 0rem;">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>ALBENDAZOL</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/albendazol.png" alt="Second slide"></div>
         <p>ALBENDAZOL 25% CO</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $480.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -28,14 +30,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>ALCOBEST 25% CO</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/alcobest.png"></div>
         <p>ALCOBEST 25% CO solucion topica</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $750.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -43,14 +49,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>BOVEX</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/BOVEX.png" alt="Second slide"></div>
         <p>BOVEX 25% CO X2 LITROS</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $850.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -58,7 +68,9 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container">
     <h1 class="mt-4">
@@ -68,14 +80,16 @@ margin-left: 59px;">
     
   </div>
   <!-- /.container -->
-  <div class="row center" style="    margin-right: -248px;
-  margin-left: 59px;">
-      <div class="col-12 col-md-3"><div class="card">
+  <div class="row center" style="margin-right: 0rem;
+  margin-left: 0rem;">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>COCCIGAN</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/COCCIGAN.png" alt="Second slide"></div>
           <p>SIBRE X 25 GR</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $400.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -83,14 +97,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
   
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>COOPERSOL</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/Coopersol.png"></div>
           <p>COOPERSOL 22.3%</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $950.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -98,14 +116,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
   
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>DERRIVON</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/DERRIVON.png" alt="Second slide"></div>
           <p>METRIFONATO</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $850.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -113,7 +135,9 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
     </div>
 
 
