--- a/src/app/Medicamentos/vacunas/vacunas.component.html
+++ b/src/app/Medicamentos/vacunas/vacunas.component.html
@@ -13,14 +13,16 @@
   
 </div>
 <!-- /.container -->
-<div class="row center" style="    margin-right: -248px;
-margin-left: 59px;">
-    <div class="col-12 col-md-3"><div class="card">
+<div class="row center" style="margin-right: 0rem;
+margin-left: 0rem;">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>BOVISAN</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/VIR.png" alt="Second slide"></div>
         <p>BOVISANN LEPTO 8 X 15 DOSIS</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $580.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -28,14 +30,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>CLOSTRISAN</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/Clos.jpg"></div>
         <p>CLOSTRISAN P </p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $650.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -43,15 +49,19 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>CLOSTRISAN-9+T
         </h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/Clostri.png" alt="Second slide"></div>
         <p>CLOSTRISAN-9+T X50 DOSIS</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $850.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -59,7 +69,9 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
   </div>
   <div class="container">
     <h1 class="mt-4">
@@ -69,14 +81,16 @@ margin-left: 59px;">
     
   </div>
   <!-- /.container -->
-  <div class="row center" style="    margin-right: -248px;
-  margin-left: 59px;">
-      <div class="col-12 col-md-3"><div class="card">
+  <div class="row center" style="margin-right: 0rem;
+  margin-left: 0rem;">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>COVEXIN</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/Cove.png" alt="Second slide"></div>
           <p>COVEXIN X 50 DOSIS</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $600.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -84,14 +98,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
   
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>ENCEFALITIS</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/ENCE.png"></div>
           <p>ENCEFALITIS ESQUINA X 10 DOSIS</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $550.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -99,14 +117,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
   
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>PROVIDEAN</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/PROVIDEAN.png" alt="Second slide"></div>
           <p>PROVIDEAN CLLOSTIDIAL 8</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $850.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -114,7 +136,9 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
     </div>
 
 
