--- a/src/app/alimentos/alimentos.component.css
+++ b/src/app/alimentos/alimentos.component.css
@@ -4,3 +4,21 @@ footer {
   color: white;
   padding: 15px;
 }
+.sonbras{
+  -webkit-box-shadow: 0px 2px 15px -1px rgba(0,0,0,0.97); 
+box-shadow: 0px 2px 15px -1px rgba(0,0,0,0.97);
+}
+.margen{
+  margin: 4%;
+}
+h2{
+  text-align: center;
+}
+.footCopyright{
+  margin-top: 0px;
+      line-height: 40px;
+      background-color: #000;
+      color: #e0e0e0;
+      font-size: 12px;
+      text-align: center;
+    }
