--- a/src/app/alimentos/alimentos.component.html
+++ b/src/app/alimentos/alimentos.component.html
@@ -13,14 +13,15 @@
   
 </div>
 <!-- /.container -->
-<div class="row center" style="    margin-right: -248px;
-margin-left: 59px;">
-    <div class="col-12 col-md-3"><div class="card">
+<div class="row center" style="margin-right: 0rem; margin-left: 0rem;">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+          <div class="margen">
         <h2>CREOLINA</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/CREOLINA.png" alt="Second slide"></div>
         <p>CREOLINA GOLD</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $480.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -28,14 +29,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+        </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+          <div class="margen">
         <h2>FINCA</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/fincaconejos.jpg"></div>
         <p>FINCA CONEJOS X 1 KILO</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $750.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -43,14 +48,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+        </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+          <div class="margen">
         <h2>FINCA</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/corcel.jpg" alt="Second slide"></div>
-        <p>FINCA CORCEL X 40 KILOS</p>
-        <h3>Adquirir</h3>
+        <p>FINCA CORCEL X 40 KILOS.</p>
+        <h3></h3>
         <p>Desde: $850.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -58,7 +67,9 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container">
     <h1 class="mt-4">
@@ -68,14 +79,15 @@ margin-left: 59px;">
     
   </div>
   <!-- /.container -->
-  <div class="row center" style="    margin-right: -248px;
-  margin-left: 59px;">
-      <div class="col-12 col-md-3"><div class="card">
+  <div class="row center" style="margin-right: 0rem; margin-left: 0rem;">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+            <div class="margen">
           <h2>NOVILLAS</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/novillasdesarrollo.jpg" alt="Second slide"></div>
           <p>NOVILLAS DESARROLLO X 40 KILOS</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $400.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -83,15 +95,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
+          </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+            <div class="margen">
         <h2>FOSFORYSAL</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/alimento21.jpg" alt="Second slide"></div>
-        <p>El ganado ira ganando cuerpo desde el primer dia que coma.</p>
-        <h3>Adquirir</h3>
+        <p>EL GANADO IRA GANANDO CUERPO.</p>
+        <h3></h3>
         <p>Desde: $400.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -99,15 +114,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
+        </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+          <div class="margen">
       <h2>ENGORDA</h2>
       <h5></h5>
       <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/alimento10.jpg" alt="Second slide"></div>
-      <p>Alimento de alta energia, con 13 y 18% de proteina.</p>
-      <h3>Adquirir</h3>
+      <p>ALIMENTO DE ALTA ENERGIA.</p>
+      <h3></h3>
       <p>Desde: $450.00 MNX</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
@@ -115,10 +133,12 @@ margin-left: 59px;">
         </li>
       </ul>
       <hr class="d-sm-none">
+      </div>
+      </div>
     </div>
   </div>
 
-  <!--<br>
+  <br>
   <br>
     <footer>
         <div class="container">
@@ -139,4 +159,4 @@ margin-left: 59px;">
           </div>
         </div>  
       </div>
-      </footer>-->
+      </footer>
