--- a/src/app/herbicidas/herbicidas.component.html
+++ b/src/app/herbicidas/herbicidas.component.html
@@ -13,14 +13,16 @@
   
 </div>
 <!-- /.container -->
-<div class="row center" style="    margin-right: -248px;
-margin-left: 59px;">
-    <div class="col-12 col-md-3"><div class="card">
+<div class="row center" style="margin-right: 0rem;
+margin-left: 0rem;">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>CAMPERO</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/campero.png" alt="Second slide"></div>
         <p>CAMPERO</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $700.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -28,14 +30,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>INVENSAMINA</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/invensamina.png"></div>
         <p>INVENSAMINA 720 SL</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $650.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -43,14 +49,18 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
 
-    <div class="col-12 col-md-3"><div class="card">
+    <div class="col-12 col-md-3">
+      <div class="card sonbras">
+        <div class="margen">
         <h2>PANZER</h2>
         <h5></h5>
         <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/PANZER.jpg" alt="Second slide"></div>
         <p>PANZER 480</p>
-        <h3>Adquirir</h3>
+        <h3></h3>
         <p>Desde: $750.00 MNX</p>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
@@ -58,8 +68,11 @@ margin-left: 59px;">
           </li>
         </ul>
         <hr class="d-sm-none">
-      </div></div>
+      </div>
+      </div>
+    </div>
   </div>
+
   <div class="container">
     <h1 class="mt-4">
         <p class="font-weight-light"></p>
@@ -68,14 +81,16 @@ margin-left: 59px;">
     
   </div>
   <!-- /.container -->
-  <div class="row center" style="    margin-right: -248px;
-  margin-left: 59px;">
-      <div class="col-12 col-md-3"><div class="card">
+  <div class="row center" style="margin-right: 0rem;
+  margin-left: 0rem;">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>PANZER</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/panzer.png" alt="Second slide"></div>
           <p>PANZER 747 WG</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $500.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -83,14 +98,18 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
  
-      <div class="col-12 col-md-3"><div class="card">
+      <div class="col-12 col-md-3">
+        <div class="card sonbras">
+          <div class="margen">
           <h2>PARTNER</h2>
           <h5></h5>
           <div class="fakeimg"> <img width="200" height="150" class="d-block w-100" src="assets/img/PARTNER.png" alt="Second slide"></div>
           <p>PARTNER 50 WP</p>
-          <h3>Adquirir</h3>
+          <h3></h3>
           <p>Desde: $850.00 MNX</p>
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
@@ -98,7 +117,9 @@ margin-left: 59px;">
             </li>
           </ul>
           <hr class="d-sm-none">
-        </div></div>
+        </div>
+        </div>
+      </div>
     </div>
 
 
