--- a/src/app/Autenticacion/registro/registro.component.html
+++ b/src/app/Autenticacion/registro/registro.component.html
@@ -1,20 +1,33 @@
-<div class="row">
-  <div class="col-md-6 offset-md-3">
-    <form [formGroup] = "registroForm" (ngSubmit)="onSubmit()">
-      <h4>Introduzca sus datos de registro</h4>
+<body>
+    <font face="Comic Sans MS,Arial,Verdana">Introduzca sus datos de registro</font>
+    <br>
 
-      <label>Correo electronico</label>
-      <input type="email" id="inputEmail" class="form-control" formControlName="email" autofocus>
-      <p class="alert alert-danger" *ngIf="erroresForm.email">{{erroresForm.email}}</p>
-
-      <label>Contraseña</label>
-      <input type="password" id="inputPassword" class="form-control" formControlName="password">
-      <p class="alert alert-danger" *ngIf="erroresForm.password">
-        {{erroresForm.password}}
-      </p>
-      <hr>
-      <button type="submit" class="btn btn-primary" [disabled]="!registroForm.valid">Registrar</button>
-    </form>
-    <p>Si ya dispone de una cuenta pulse<a routerLink="/Login">aquí</a></p>
+    <div class="container sss card col-6">
+      <div class="row">
+        <div class="col">
+          <div class="">
+          <form [formGroup] = "registroForm" (ngSubmit)="onSubmit()">
+          <br><label>CORREO ELECTRONICO</label><br>
+          <input type="email" id="inputEmail" class="form-control" formControlName="email" autofocus>
+          <p class="alert alert-danger" *ngIf="erroresForm.email">{{erroresForm.email}}</p>
+         <br>
+         <br><label>CONTRASEÑA</label>
+         <br>
+           <input type="password" id="inputPassword" class="form-control" formControlName="password">
+           <p class="alert alert-danger" *ngIf="erroresForm.password">
+           {{erroresForm.password}}
+           </p>
+           <hr>
+           <button type="submit" class="btn btn-primary" [disabled]="!registroForm.valid">REGISTRAR</button>
+           </form>
+           <br>
+          <p><a routerLink="/Login">INICIAR SESION</a></p>
+         </div>
+         </div>
+        
+      <div class="col colordiv">
+            <img class="posicionImg" src="assets/img/vacas.png" width="100" height="100">
+    </div>
   </div>
-</div>
+  </div>
+</body>
