--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.image{
+/*.image{
     height:40em; 
     background-size:cover;
     width:auto;
@@ -6,4 +6,4 @@
     background-position:50% 50%;
     background-size: 1349px 702px
 
-}
+}*/
