--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
-<div class="image">
+<app-navbar>
 <router-outlet></router-outlet>
-</div>
+</app-navbar>
