--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,3 +6,7 @@ nav{
 .mb-5{
     margin-bottom: 0rem!important;
 }
+.sonbras{
+    -webkit-box-shadow: 0px 2px 15px -1px rgba(0,0,0,0.97); 
+  box-shadow: 0px 2px 15px -1px rgba(0,0,0,0.97);
+  }
