--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,27 @@
-<nav class="navbar navbar-dark bg-dark mb-5">
+<nav class="navbar navbar-dark bg-dark mb-5 sonbras" >
   <a class="navbar-brand" href="/Principal">SISGEGA</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]={exact:true} *ngIf="isAuth()" routerLink="/"></a>
+      <a class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]={exact:true} *ngIf="isAuth()" routerLink="/Principal"></a>
       <a class="nav-item nav-link" *ngIf="isAuth()" routerLink="/Alimentos">Alimentos</a>
       <a class="nav-item nav-link" *ngIf="isAuth()" routerLink="/herbicidas">Herbicidas</a>
       <!--<a class="nav-item nav-link" *ngIf="isAuth()" routerLink="/presupuestos">Pestisidas</a>
       <a class="nav-item nav-link" *ngIf="isAuth()" routerLink="/facturas">Vacas</a>
       <a class="nav-item nav-link" routerLink="/registro">Registro</a>-->
+      <!----><li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" *ngIf="isAuth()" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Medicamentos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="/Desparacitantes" href="#">Desparasitantes</a>
+            <a class="dropdown-item" routerLink="/Vacunas" href="#">Vacunas</a>
+          </div>
+        </li>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <li class="nav-item" *ngIf="!isAuth()">
-      <button class="btn btn-primary float-md-right" routerLink="/Login">Inicie sesión</button>
+      <button class="btn btn-primary float-md-right" routerLink="/Login">Iniciar sesión</button>
     </li>
     <li class="nav-item" *ngIf="isAuth()">
         <button class="btn btn-primary float-md-right" (click)="onLogout()">Cerrar sesion</button>
