--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -1,15 +1,14 @@
-footer {
-	background-color:#1A1A1A;
+.footer {
+	background-color:#000;
 	height: 20%;
   color: white;
-  padding: 30px;
+  padding: 15px;
+  
 }
-
 .main1 { 
   display:flex;
   margin:0 auto;
 }
-
 a img {
     color: #fff;
 }
@@ -24,3 +23,15 @@ box-shadow: 0px 2px 15px -1px rgba(0,0,0,0.97);
 .margen{
   margin: 4%;
 }
+h2{
+  font-size: 20px;
+  text-align: center;
+}
+.footCopyright{
+margin-top: 0px;
+    line-height: 40px;
+    background-color: #000;
+    color: #e0e0e0;
+    font-size: 12px;
+    text-align: center;
+  }
